--- a/circle.yml
+++ b/circle.yml
@@ -27,14 +27,14 @@ checkout:
 
 ## Customize dependencies
 dependencies:
-  #pre:
+  pre:
     #- npm install coffeescript # install from a different package manager
     #- gem uninstall bundler # use a custom version of bundler
     #- gem install bundler --pre
 
   override:
-    - bundle install: # note ':' here
-        timeout: 180 # fail if command has no output for 3 minutes
+    #- bundle install: # note ':' here
+    #    timeout: 180 # fail if command has no output for 3 minutes
 
   # we automatically cache and restore many dependencies between
   # builds. If you need to, you can add custom paths to cache:
@@ -43,11 +43,11 @@ dependencies:
     - "~/custom_2" # relative to the user's home directory
 
 ## Customize database setup
-database:
-  override:
+#database:
+  #override:
     # replace CircleCI's generated database.yml
-    - cp config/database.yml.ci config/database.yml
-    - bundle exec rake db:create db:schema:load
+    #- cp config/database.yml.ci config/database.yml
+    #- bundle exec rake db:create db:schema:load
 
 ## Customize test commands
 # test:
@@ -63,6 +63,8 @@ database:
 deployment:
   staging:
     branch: master
+    heroku:
+      appname: foo-bar-123
 
 ## Custom notifications
 # notify:
